<resources>
    <string name="app_name">MainActivity</string>
    <string name="btn_home_compute">Faire un calcul</string>
    <string name="egal">=</string>
    <string name="first_operand">first_operand</string>
    <string name="second_operand">second_operand</string>
    <string name="btn_call">S.O.S.</string>
    <string name="btn_search">Research</string>
    <string name="btn_partagervia">Share via</string>
    <string name="btn_locaction">show Location</string>
</resources>