<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_home_compute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_home_compute" />

    <Button
        android:id="@+id/btn_home_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_call" />

    <Button
        android:id="@+id/btn_home_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_search" />

    <Button
        android:id="@+id/btn_home_partagervia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_partagervia" />

</LinearLayout>